[package]
name = "ppo2"
version = "0.1.0"
authors = ["bolshoytoster"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = "*"
candle-nn = "*"
# For shuffling minibatches
rand = "*"

# Used in examples
[dev-dependencies]
candle-optimisers = "*"
gym-rs = "*"